--- a/aprendizaje-supervisado.html
+++ b/aprendizaje-supervisado.html
@@ -39,16 +39,19 @@ class: center, middle, inverse, title-slide
 
 # Contenidos
 
-Introducción
-Flujo de un proyecto de *machine learning*
+- Introducción
 
+- Flujo de un proyecto de *machine learning*
 
+--
 
-Objetivo de la clase: 
+**Objetivo de la clase:**
 
 Revisar un flujo estándar de *machine learning*
 
+--
 
+**Plan**: Primer bloque será expositivo. En el segundo bloque pondremos en práctica los conceptos
 
 ---
 
@@ -219,7 +222,19 @@ Probar el resultado en el set de validación
 ]
 
  
- 
+
+---
+
+## Antes de seguir...
+
+
+
+Tengan los datos a mano
+- Titanic
+- Encuesta de Presupeustos Familiares (EPF)
+
+Ejecuten el código con las funciones que les compartí en el archivo helpers.R
+
 
 
 ---
@@ -236,7 +251,7 @@ Probar el resultado en el set de validación
 ## [7] "Parents/Children Aboard" "Fare"
 ```
 
-&lt;img src="aprendizaje-supervisado_files/figure-html/unnamed-chunk-3-1.png" width="50%" style="display: block; margin: auto;" /&gt;
+&lt;img src="aprendizaje-supervisado_files/figure-html/unnamed-chunk-4-1.png" width="50%" style="display: block; margin: auto;" /&gt;
 
 
 
@@ -247,14 +262,14 @@ Probar el resultado en el set de validación
 .panelset[
 .panel[.panel-name[sexo]
 
-&lt;img src="aprendizaje-supervisado_files/figure-html/unnamed-chunk-4-1.png" width="50%" style="display: block; margin: auto;" /&gt;
+&lt;img src="aprendizaje-supervisado_files/figure-html/unnamed-chunk-5-1.png" width="50%" style="display: block; margin: auto;" /&gt;
 
 
 ]
 
 .panel[.panel-name[clase]
 
-&lt;img src="aprendizaje-supervisado_files/figure-html/unnamed-chunk-5-1.png" width="50%" style="display: block; margin: auto;" /&gt;
+&lt;img src="aprendizaje-supervisado_files/figure-html/unnamed-chunk-6-1.png" width="50%" style="display: block; margin: auto;" /&gt;
 
 ]
 
@@ -283,7 +298,7 @@ Probar el resultado en el set de validación
 &lt;/table&gt;
 
 
-&lt;img src="aprendizaje-supervisado_files/figure-html/unnamed-chunk-7-1.png" width="50%" style="display: block; margin: auto;" /&gt;
+&lt;img src="aprendizaje-supervisado_files/figure-html/unnamed-chunk-8-1.png" width="50%" style="display: block; margin: auto;" /&gt;
 
 
 
@@ -293,7 +308,7 @@ Probar el resultado en el set de validación
 
 Número de padres-hijos a bordo
 
-&lt;img src="aprendizaje-supervisado_files/figure-html/unnamed-chunk-8-1.png" width="50%" style="display: block; margin: auto;" /&gt;
+&lt;img src="aprendizaje-supervisado_files/figure-html/unnamed-chunk-9-1.png" width="50%" style="display: block; margin: auto;" /&gt;
 
 
 
@@ -303,7 +318,7 @@ Número de padres-hijos a bordo
 
 Número de hermanos-pareja a bordo
 
-&lt;img src="aprendizaje-supervisado_files/figure-html/unnamed-chunk-9-1.png" width="50%" style="display: block; margin: auto;" /&gt;
+&lt;img src="aprendizaje-supervisado_files/figure-html/unnamed-chunk-10-1.png" width="50%" style="display: block; margin: auto;" /&gt;
 
 ]
 ]
@@ -442,19 +457,23 @@ test_set &lt;-  titanic2[-train_indices, ]
 
 
 ```r
+# Ajuste de una regresión logística
 model &lt;- glm(formula = survived ~ sex_male + pclass_2 + pclass_3 + age + fare +
              siblings_spouses_aboard + parents_children_aboard,
              family = "binomial",
     data = train_set)
 
+# Predicción en el set de entrenamiento
 predict_reg1 &lt;- predict(model, train_set, type = "response")
 
+# Predicción en el set de testeo
 predict_reg2 &lt;- predict(model, test_set, type = "response")
 
-
+# Definición de un umbral. Usamos 0.5
 predictions_train &lt;- if_else(predict_reg1 &gt; 0.5, 1, 0)
 predictions_test &lt;- if_else(predict_reg2 &gt; 0.5, 1, 0)
 
+# Calculamos el porcentaje de acierto en cada uno de los conjuntos
 acc_train &lt;- mean(train_set$survived == predictions_train)
 acc_test &lt;- mean(test_set$survived == predictions_test)
 
@@ -476,7 +495,6 @@ print(paste("acc test: ", acc_test) )
 
 ---
 
-&lt;br&gt;
 ## ¿Qué hubiera ocurrido con otra partición?
 
 --
@@ -596,16 +614,13 @@ crossval &lt;- train(as.factor(survived) ~ sex_male + pclass_2 + pclass_3 + age 
 
 ### ¿80% comparado con qué?
 
-.center[
-&lt;img src="imagenes/moneda.png" width="400" /&gt;
-]
 
 
 ---
 
 ## Modelo base
 
-&lt;img src="aprendizaje-supervisado_files/figure-html/unnamed-chunk-20-1.png" width="50%" style="display: block; margin: auto;" /&gt;
+&lt;img src="aprendizaje-supervisado_files/figure-html/unnamed-chunk-21-1.png" width="50%" style="display: block; margin: auto;" /&gt;
 
 --
 
@@ -753,6 +768,16 @@ predictions_test &lt;- if_else(predict_reg2 &gt; 0.8, 1, 0)
 ## Experimento
 
 
+
+
+
+
+.panelset[
+
+
+.panel[.panel-name[umbrales]
+
+
 ```r
 acc_08 &lt;- as.character(round(mean(confusion_2$real == confusion_2$pred), 2))
 acc_05 &lt;-  as.character(round(mean(confusion$real == confusion$pred), 2))
@@ -762,16 +787,49 @@ El *accuracy* para el umbral de 0.5 es 0.81
 El *accuracy* para el umbral de 0.8 es 0.73
 
 
---
+&lt;img src="aprendizaje-supervisado_files/figure-html/unnamed-chunk-26-1.png" width="50%" style="display: block; margin: auto;" /&gt;
+
+
+]
+
+.panel[.panel-name[código-umbrales]
 
 
 
-&lt;img src="aprendizaje-supervisado_files/figure-html/calcular valores acc-1.png" width="50%" style="display: block; margin: auto;" /&gt;
+```r
+calcular_acc &lt;- function(umbral, predicciones, test_data) {
+  predictions_test &lt;- if_else(predicciones &gt; umbral, 1, 0)
+  return(mean(test_data == predictions_test)) 
+}
+
+acc_values &lt;- map_dbl(seq(0.1, 0.9, 0.05), ~calcular_acc(.x, predict_reg2, test_set$survived) )
+df &lt;- data.frame(acc = acc_values, thresholds = seq(0.1, 0.9, 0.05)) 
+max_acc = df %&gt;% filter(acc == max(acc)) %&gt;% pull(thresholds)
+
+df %&gt;% 
+  ggplot(aes(x = thresholds, y = acc, group = 1)) +
+  geom_line() +
+  geom_vline( xintercept = max_acc ) +
+  theme_bw() +
+  annotate("text",  x = max_acc + 0.05, y = 0.75, label = round(max(df$acc), 2) )
+```
+
+
+]
+]
+
+
 
 ---
 
 ## ¿Cómo se ve nuestra matriz de confusión?
 
+
+```r
+predictions_test_055 &lt;- if_else(predictions_test &gt; max_acc, 1, 0)
+confusion_055 &lt;- data.frame(real = test_set$survived, pred = predictions_test_055)
+table(confusion_055$real, confusion_055$pred)
+```
 
 ```
 ##    
@@ -781,7 +839,7 @@ El *accuracy* para el umbral de 0.8 es 0.73
 ```
 
 
-Estamos prediciendo valor 1 solo cuando estamos muy seguros
+Estamos prediciendo valor 1 cuando estamos bastante seguros
 
 ### ¿Es suficiente el *accuracy*?
 
@@ -804,12 +862,14 @@ Ambas medidas están en tensión: al subir una, generalmente baja la otra
 
 --
 
-Podemos calcular TPR y FPR para muchos umbrales de predicción
+### Podemos calcular TPR y FPR para muchos umbrales de predicción
 
+---
 
+## Curva ROC
 
-
-
+.panelset[
+.panel[.panel-name[curva-roc]
 
 
 
@@ -837,9 +897,66 @@ roc_df %&gt;%
 
 &lt;img src="aprendizaje-supervisado_files/figure-html/unnamed-chunk-28-1.png" width="50%" style="display: block; margin: auto;" /&gt;
 
+]
+
+.panel[.panel-name[codigo-anexo]
+
+```r
+get_confusion_matrix &lt;- function(umbral, predicciones, test_data) {
+  
+  predictions_test &lt;- if_else(predicciones &gt;= umbral, 1, 0) 
+  df &lt;- data.frame(real = test_set$survived, pred = predictions_test)
+  confusion &lt;- table(df$real, df$pred)
+  
+  
+  # Si solo hay predicciones positivas
+  if (sum(df$pred == 1 ) == nrow(df) ) {
+        `0` = c(0, 0)
+        return (cbind(`0`, confusion)) 
+    # Si solo hay predicciones negativas
+  } else if (sum(df$pred == 0 ) == nrow(df)) {
+      `1` = c(0, 0)
+      return(cbind(confusion,   `1`))
+  } else {
+    return(confusion)
+  }
+  
+}
 
 
+get_tpr &lt;- function(confusion) {
+  tp = confusion[2, 2]  
+  fn = confusion[2, 1]
+  tp / (tp + fn)
+}
 
+get_fpr &lt;- function(confusion) {
+  fp = confusion[1, 2]
+  tn = confusion[1 ,1]
+  fp / (fp + tn)
+
+}
+```
+]
+]
+
+---
+
+## Curva roc en fácil
+
+Con el paquete pROC es mucho más sencillo
+
+
+```r
+library(pROC)
+sim_roc &lt;- roc(response = test_set$survived,
+               predictor = predict_reg2)
+
+ggroc(sim_roc, legacy.axes = TRUE) +
+  labs(x = 'False-positive rate', y = 'True-positive rate', title = 'Simulated ROC curve')
+```
+
+&lt;img src="aprendizaje-supervisado_files/figure-html/unnamed-chunk-30-1.png" width="50%" style="display: block; margin: auto;" /&gt;
 
 
 ---
@@ -988,16 +1105,16 @@ Usaremos datos de la VIII Encuesta de Presupuestos Familiares. Entrenaremos un m
 
 Realizaremos todo el flujo de un proyecto de *machine learning*
 
-- Exploración (relación entre la variable objetivo y las covariables)
-- Separación train/test
-- Entrenamiento (incluir *cross validation*)
-- Evaluación en el set de testeo
+- Exploración (relación entre la variable objetivo y las covariables) (20 minutos)
+- Separación train/test (10 minutos)
+- Entrenamiento (incluir *cross validation*) (20 minutos)
+- Evaluación en el set de testeo (10 minutos)
 
 ---
 
 ## Reseña EPF
 
-&lt;img src="aprendizaje-supervisado_files/figure-html/unnamed-chunk-33-1.png" width="50%" style="display: block; margin: auto;" /&gt;
+&lt;img src="aprendizaje-supervisado_files/figure-html/unnamed-chunk-34-1.png" width="50%" style="display: block; margin: auto;" /&gt;
 
 
 ---
